--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.10.5",
-    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.13.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,8 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.3.0",
     "formik": "^2.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
@@ -30,8 +29,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
